--- a/_posts/2021-02-25-0222-0228.md
+++ b/_posts/2021-02-25-0222-0228.md
@@ -84,3 +84,72 @@ category: TIL
 -> 깃 커밋 내용 확인
 
 **하나의 기능을 단위로 하여 의미있는 이름으로 커밋을 하자**
+
+## 0225
+# 뷰 인스턴스
+## 뷰 인스턴스의 정의와 속성
+*뷰 인스턴스는 뷰로 화면을 개발하기 위해 필수적으로 생성해야 하는 기본 단위*
+```javascript
+new Vue ({
+	...
+});
+```
+* new Vue()로 인스턴스를 생성할 때 Vue를 생성자라고 한다.
+* 생성자를 사용하는 이유는 뷰로 개발할 때 필요한 기능들을 미리 정의해 놓고 사용자가 그 기능을 재정의하여 편리하게 사용하도록 하기 위해서다.
+
+## 뷰 인스턴스 옵션 속성
+* 인스턴스를 생성할 때 재정의할 data, el, template 등의 속성을 의미한다.
+* el 속성은 뷰로 만든 화면이 그려지는 시작점을 의미한다.
+* template 속성은 화면에 표시할 마크업 요소를 정의하는 속성이다.
+* methods 속성은 화면 로직 제어와 관계된 메서드를 정의하는 속성이다.
+
+## 뷰 인스턴스 유효 범위
+*뷰 인스턴스를 생성하면 HTML의 특정 범위 안에서만 옵션 속성들이 적용되어 나타나는데, 이를 인스턴스의 유효 범위라고 한다.*
+
+* 뷰 인스턴스 옵션 속성으로 el을 인스턴스에 정의하고 생성한 뒤, 브라우저에서 실행하면 el속성에 지정한 화면 요소에 인스턴스가 부착된다.
+* el속성에 인스턴스가 부착되고 나면 인스턴스에 정의한 옵션 객체의 내용이 지정한 화면 요소와 그 이하 레벨의 화면 요소에 적용되어 값이 치환된다.
+* 그러나 el 속성으로 지정한 범위를 벗어나게 되면 뷰에서 인식하지 못한다.
+
+## 뷰 인스턴스 라이프 사이클
+*일반적으로 애플리케이션이 가지는 생명 주기*
+
+* 라이프 사이클 속성: 인스턴스의 상태에 따라 호출할 수 있는 속성들
+* 라이프 사이클 훅: 라이프 사이클 속성에서 실행되는 커스텀 로직
+* 라이프 사이클 단계를 크게 나누면 **인스턴스의 생성**, **생성된 인스턴스를 화면에 부착**, **화면에 부착된 인스턴스의 내용이 갱신**, **인스턴스가 제거되는 소멸**의 4단계로 이루어 진다.
+* 부착 -> 갱신 구간은 데이터가 변경되는 경우에만 거치게 된다.
+* 각 단계 사이에 라이프 사이클 속성 created, mounted, updated 등이 실행된다.
+
+### beforeCreate
+* 인스턴스가 생성되고 나서 가장 처음 실행되는 라이프 사이클 단계
+* data 속성과 methods 속성이 아직 인스턴스에 정의되어 있지 않고, 돔과 같은 화면 요소에도 접근할 수 없다.
+
+### created
+* data 속성과 methods 속성이 정의되었기 때문에 접근하여 로직을 실행할 수 있다.
+* 다만, 아직 인스턴스가 화면 요소에 부착되기 전이기 때문에 template 속성에 정의된 돔 요소로 접근할 수 없다.
+* data 속성과 methods 속성에 접근할 수 있는 가장 첫 라이프 사이클 단계이자 컴포넌트가 생성되고 나서 실행되는 단계이기 때문에 **서버에 데이터를 요청하여 받아오는 로직을 수행하기 좋다**.
+
+### beforeMount
+* template 속성에 지정한 마크업 속성을 render() 함수로 변환한 후 el 속성에 지정한 화면 요소에 인스턴스를 부착하기 전에 호출되는 단계
+* render() 함수가 호출되기 직전의 로직을 추가하기 좋다.
+
+### mounted
+* el 속성에서 지정한 화면 요소에 인스턴스가 부착되고 나면 호출되는 단계
+* template 속성에 정의한 화면 요소에 접근할 수 있어 화면 요소를 제어하는 로직을 수행하기 좋은 단계
+* 다만, 돔에 인스턴스가 부착되자마자 바로 호출되기 때문에 하위 컴포넌트나 외부 라이브러리에 의해 추가된 화면 요소들이 최종 HTML 코드로 변환되는 시점과는 다를 수 있다.
+
+### beforeUpdate
+* 관찰하고 있는 데이터가 변경되면 가상 돔으로 화면을 다시 그리기 전에 호출되는 단계이며, 변경 예정인 새 데이터에 접근할 수 있어 변경 예정 데이터의 값과 관련된 로직을 미리 넣을 수 있다.
+* 값을 변경하는 로직을 넣더라도 화면이 다시 그려지지는 않는다.
+
+### updated
+* 데이터가 변경되고 나서 가상 돔으로 다시 화면을 그리고나면 실행되는 단계
+* 데이터 변경 후 화면 요소 제어와 관련된 로직을 추가하기 좋은 단계
+* 이 단계에서 데이터 값을 변경하면 무한 루프에 빠질 수 있기 때문에 값을 변경하려면 computed, watch와 같은 속성을 사용해야 한다.
+* 데이터 값을 갱신하는 로직은 가급적이면 beforeUpdate에 추가하고, updated에서는 변경 데이터의 화면 요소와 관련된 로직을 추가하는 것이 좋다.
+
+### beforeDestroy
+* 뷰 인스턴스가 파괴되기 직전에 호출되는 단계
+* 뷰 인스턴스의 데이터를 삭제하기 좋은 단계
+
+### destroyed
+* 뷰 인스턴스에 정의한 모든 속성이 제거되고 하위에 선언한 인스턴스들 또한 모두 파괴
