--- a/_posts/2021-02-25-0222-0228.md
+++ b/_posts/2021-02-25-0222-0228.md
@@ -153,3 +153,49 @@ new Vue ({
 
 ### destroyed
 * 뷰 인스턴스에 정의한 모든 속성이 제거되고 하위에 선언한 인스턴스들 또한 모두 파괴
+
+
+## 0226 
+# 뷰 컴포넌트
+## 컴포넌트란?
+*조합하여 화면을 구성할 수 있는 블록*
+
+* 빠르게 구조화하여 일괄적인 패턴으로 개발할 수 있다.
+* 화면의 영역을 컴포넌트로 쪼개서 재활용할 수 있는 형태로 관리하면 나중에 코드를 다시 사용하기가 편리하다.
+* 컴포넌트를 증록하는 방법은 전역과 지역 두가지가 있다.
+
+### 전역 컴포넌트 등록
+* 여러 인스턴스에서 공통으로 사용할 수 있다.
+* 뷰 라이브러리를 로딩하고 나면 접근 가능한 Vue 변수를 이용하여 등록한다.
+```javascript
+Vue.component('컴포넌트 이름', {
+	// 컴포넌트 내용
+});
+```
+* 전역 컴포넌트 등록 형식에는 컴포넌트 이름과 컴포넌트 내용이 있다.
+* 컴포넌트 이름은 template 속성에서 사용할 HTML 사용자 정의 태그 이름을 의미한다.
+* 컴포넌트 태그가 실제 화면의 HTML 요소로 변환될 때 표시될 속성들을 컴포넌트 내용에 작성한다.
+
+### 전역 컴포넌트가 화면에 나타나기까지의 처리 과정
+1. 뷰 라이브러리 파일 로딩
+2. 뷰 생성자로 컴포넌트 등록
+3. 인스턴스 객체 생성
+4. 특정 화면 요소에 인스턴스 부착
+5. 인스턴스 내용 변환 (등록된 컴포넌트 내용도 변환)
+6. 변환된 화면 요소를 사용자가 최종 확인
+
+### 지역 컴포넌트 등록
+* 특정 인스턴스에서만 유효한 범위를 갖는 컴포넌트
+* 전역 컴포넌트와는 다르게 인스턴스에 components 속성을 추가하고 등록할 컴포넌트 이름과 내용을 정의하면 된다.
+```javascript
+new Vue({
+	components: {
+		'컴포넌트 이름': 컴포넌트 내용
+	}
+});
+```
+
+### 지역 컴포넌트와 전역 컴포넌트의 차이
+* 전역 컴포넌트는 인스턴스를 새로 생성할 때마다 인스턴스에 components 속성으로 등록할 필요없이 한 번 등록하면 어느 인스턴스에서도 사용할 수 있다.
+* 반대로 지역 컴포넌트는 새 인스턴스를 등록할 때마다 등록해 줘야 한다.
+* 제한되는 유효범위가 다르다.
