--- a/_posts/2021-02-25-0222-0228.md
+++ b/_posts/2021-02-25-0222-0228.md
@@ -199,3 +199,78 @@ new Vue({
 * 전역 컴포넌트는 인스턴스를 새로 생성할 때마다 인스턴스에 components 속성으로 등록할 필요없이 한 번 등록하면 어느 인스턴스에서도 사용할 수 있다.
 * 반대로 지역 컴포넌트는 새 인스턴스를 등록할 때마다 등록해 줘야 한다.
 * 제한되는 유효범위가 다르다.
+
+## 0227
+# 뷰 컴포넌트 통신
+## 컴포넌트 간 통신과 유효 범위
+*뷰의 경우 컴포넌트로 화면을 구성하므로 같은 웹 페이지라도 데이터를 공유할 수 없다. 그 이유는 컴포넌트마다 자체적으로 고유한 유효 범위를 갖기 때문이다.*
+
+### 상위 하위 컴포넌트 관계
+* 뷰 프레임워크 자체에서 정의한 컴포넌트 데이터 전달 방법중 가장 기본적인 방법은 상위(부모) - 하위(자식) 컴포넌트 간의 데이터 전달 방법이다.
+* 상위에서 하위로는 props라는 특별한 속성을 전달한다.
+* 하위에서 상위로는 기본적으로 이벤트만 전달할 수 있다.
+
+### 상위에서 하위 컴포넌트로 데이터 전달하기
+* props는 상위 컴포넌트에서 하위 컴포넌트로 데이터를 전달할 때 사용하는 속성이다.
+* props 속성을 사용하려면 먼저 하위 컴포넌트의 속성에 정의해야한다.
+
+```javascript
+props: ['props 속성 이름']
+```
+* 그런 다음 상위 컴포넌트의 HTML 코드에 등록된 child-component 컴포넌트 태그에 v-bind 속성을 추가한다.
+
+```javascript
+<child-component v-bind:props 속성 이름="상위 컴포넌트의 data 속성"></child-component>
+```
+* v-bind 속성의 왼쪽 값으로 하위 컴포넌트에서 정의한 props 속성을 넣고, 오른쪽 값으로 하위 컴포넌트에 전달할 상위 컴포넌트의 data 속성을 지정한다.
+* 인스턴스에 새로운 컴포넌트를 등록하면 기존에 있던 컴포넌트는 상위 컴포넌트가 되고, 새로 등록된 컴포넌트는 하위 컴포넌트가 된다.
+
+### 하위에서 상위 컴포넌트로 이벤트  전달하기
+* 이벤트를 발생시켜 상위 컴포넌트에서 해당 이벤트를 수신하여 상위 컴포넌트의 메서드를 호출할 수 있다.
+* 이벤트 발생과 수신은 $emit()과 v-on: 속성을 사용하여 구현한다.
+
+**이벤트 발생과 수신 형식**
+```javascript
+// 이벤트 발생
+this.$emit('이벤트명');
+// 이벤트 수신
+<child-component v-on:이벤트명="상위 컴포넌트의 메서드명"></child-component>
+```
+* $emit()을 호출하면 괄호 안에 정의된 이벤트가 발생한다.
+* 호출한 이벤트는 하위 컴포넌트를 등록하는 태그에서 v-on:으로 받는다.
+* 하위 컴포넌트에서 발생한 이벤트명을 v-on: 속성에 지정하고, 속성의 값에 이벤트가 발생했을 때 호출될 상위 컴포넌트의 메서드를 지정한다.
+* 이와 같은 방식으로 하위 컴포넌트에서 상위 컴포넌트로 신호를 올려보내면 상위 컴포넌트의 메서드를 실행할 수도 있고, 하위 컴포넌트로 내려보내는 props의 값을 조정할 수도 있다.
+
+### 같은 레벨의 컴포넌트 간 통신
+* 컴포넌트 고유의 유효 범위 때문에 상위 컴포넌트로 이벤트를 전달한 후, 공통 상위 컴포넌트에서 하위 컴포넌트에 props를 내려 보내야 한다.
+* 상위 컴포넌트가 필요 없음에도 불구하고 같은 레벨 간에 통신하기 위해 강제로 상위 컴포넌트를 두어야 한다.  	
+-> 이를 해결할 수 있는 방법이 바로 이벤트 버스
+
+### 관계 없는 컴포넌트 간 통신 - 이벤트 버스
+*개발자가 지정한 2개의 컴포넌트 간에 데이터를 주고받을 수 있는 방법*
+
+* 이벤트 버스를 구현하려면 애플리케이션 로직을 담는 인스턴스와는 별개로 새로운 인스턴스를 1개 더 생성하고, 새 인스턴스를 이용하여 이벤트를 보내고 받는다.
+* 보내는 컴포넌트에서는 .$emit()을, 받는 컴포넌트에서는 .$on()을 구현한다.
+
+```javascript
+// 이벤트 버스를 위한 추가 인스턴스 1개 생성
+let eventBus = new Vue();
+
+// 메서드를 보내는 컴포넌트
+methods: {
+ 	메서드명: function() {
+		eventBus.$emit('이벤트명', 데이터);
+	}
+}
+
+// 이벤트를 받는 컴포넌트
+methods: {
+	created: function() {
+		eventBus.$on('이벤트명', function(데이터) {
+			...
+		});
+	}
+}
+```
+* 이벤트 버스를 활용하면 원하는 컴포넌트 간에 직접적으로 데이터를 전달할 수 있어 편리하지만 컴포넌트가 많아지면 어디서 어디로 보냈는지 관리가 되지 않는 문제가 발생한다.  
+-> 문제를 해결하려면 뷰엑스라는 상태 관리 도구가 필요
