--- a/_posts/2021-02-25-0222-0228.md
+++ b/_posts/2021-02-25-0222-0228.md
@@ -274,3 +274,140 @@ methods: {
 ```
 * 이벤트 버스를 활용하면 원하는 컴포넌트 간에 직접적으로 데이터를 전달할 수 있어 편리하지만 컴포넌트가 많아지면 어디서 어디로 보냈는지 관리가 되지 않는 문제가 발생한다.  
 -> 문제를 해결하려면 뷰엑스라는 상태 관리 도구가 필요
+
+## 0228
+# 뷰 라우터
+## 라우팅이란?
+*웹 페이지 간의 이동 방법. 싱글 페이지 애플리케이션에서 주로 사용*
+
+* 라우팅으로 처리하면 깜빡거림 없이 화면을 매끄럽게 전환할 수 있을 뿐만 아니라 더 빠르게 화면을 조작할 수 있어 사용자 경험이 향상된다.
+
+### 뷰 라우터
+* 뷰에서 라우팅 기능을 구현할 수 있도록 지원하는 공식 라이브러리
+* `<router-link to="URL">`  
+-> 페이지 이동 태그. 화면에서는 <a>로 표시되며 클릭하면 to에 지정한 URL로 이동
+* `<router-view>`  
+-> 페이지 표시 태그. 변경되는 URL에 따라 해당 컴포넌트를 뿌려주는 영역
+
+```javascript 
+// 컴포넌트 정의
+let Main = { template: '<div>main</div>'};
+let Login = { template: '<div>login</div>'}
+
+// URL에 맞춰 표시할 컴포넌트 지정
+let routes = [
+     { path: '/main', component: Main},
+     { path: '/login', component: Login}
+];
+
+// 뷰 라우터 정의
+var router = new VueRouter({
+     routes
+});
+
+// 뷰 인스턴스에 라우터 추가
+var app = new Vue({
+     router
+}).$mount('#app');
+```
+* $mount() API는 el 속성과 동일하게 인스턴스를 화면에 붙이는 역할을 한다.
+
+## 네스티드 라우터
+*라우터로 페이지를 이동할 때 최소 2개 이상의 컴포넌트를 화면에 나타낼 수 있다.*
+
+* URL에 따라서 컴포넌트의 하위 컴포넌트가 다르게 표시된다. 
+
+```javascript
+let User = {
+     template: `
+          <div>
+               User Component
+               <router-view></router-view>
+          </div>
+     `
+};
+
+var routes = [
+     {
+          path: '/user',
+          component: User,
+          children: [
+               {
+                    path: 'posts',
+                    component: UserPost
+               },
+               {
+                    path: 'profile',
+                    component: UserProfile
+               },
+          ]
+     }
+];
+```
+* 네스티드 라우터와 기본 라우터의 차이점은 최상위 컴포넌트에도 <router-view>가 있고, 최상위 컴포넌트의 하위 컴포넌트에도 <router-view>가 있다는 것이다.
+* 그렇기 때문에 URL에 따라 하위 컴포넌트의 내용이 바뀌게 된다.
+* 네스티드 라우터는 화면을 구성하는 컴포넌트의 수가 적을 때는 유용하지만 한 번에 더 많은 컴포넌트를 표시하는 데는 한계가 있다.
+
+## 네임드 뷰
+*특정 페이지로 이동했을 때 여러 개의 컴포넌트를 동시에 표시하는 라우팅 방식*
+
+* 네스티드 라우터는 상위 컴포넌트가 하위 컴포넌트를 포함하는 형식이지만, 네임드 뷰는 같은 레벨에서 여러 개의 컴포넌트를 한 번에 표시
+
+```javascript
+<div id = "app">
+     <router-view name="header"></router-view>
+     <router-view></router-view>
+     <router-view name="footer"></router-view>
+</div>
+
+var router = new VueRouter({
+     routes: [
+          {
+               path: '/',
+               components: {
+                    header: Header,
+                    footer: Footer,
+                    default: Body
+               }
+          }
+     ]
+});
+```
+* name 속성은 아래 components 속성에 정의하는 컴포넌트와 매칭하기 위한 속성
+* path는 네임드 뷰가 실행될 URL을 정의하는 속성
+* 이렇게 네임드 뷰를 활용하면 특정 페이지로 이동했을 때 해당 URL에 맞추어 여러 개의 컴포넌트를 한 번에 표시할 수 있다.
+
+---
+
+# 뷰 HTTP 통신
+## 웹 앱의 HTTP 통신 방법
+*웹 앱 HTTP 통신의 대표적인 사례로는 제이쿼리의 ajax가 있다. ajax는 서버에서 받아온 데이터를 표시할 때 화면 전체를 갱신하지 않고도 화면의 일부분만 변경할 수 있게 하는 자바스크립트 기법이다.*
+
+* 뷰에서도 마찬가지로 ajax를 지원하기 위한 라이브러리를 제공하는데, 뷰 프레임워크의 필수 라이브러리로 관리하던 뷰 리소스와 요즘 가장 많이 사용하는 액시오스이다.
+
+### 뷰 리소스
+* 초기에 코어 팀에서 공식적으로 권하는 라이브러리였으나 필수적인 기능이 아니라고 판단했기 때문에 공식 지원이 중단
+* this.$http.get()을 사용하여 해당 URL에서 제공하는 데이터를 받아올 수 있다.
+
+### 액시오스
+* 현재 뷰 커뮤니티에서 가장 많이 사용되는 HTTP 통신 라이브러리
+* Promise 기반의 API 형식이 다양하게 제공되어 별도의 로직을 구현할 필요 없이 주어진 API만으로도 간편하게 원하는 로직을 구현할 수 있다.
+* 액시오스는 HTTP 통신에 대해 간단하고 직관적인 API를 제공한다. 그리고 API 형식이 다양하여 여러 설정 값을 추가하여 함께 호출할 수 있다.
+
+```javascript
+// HTTP GET 요청
+axios.get('URL 주소').then().catch();
+
+// HTTP POST 요청
+axios.post('URL 주소').then().catch();
+
+// HTTP 요청에 대한 옵션 속성 정의
+axios({
+	method: 'get',
+	url: 'URL 주소',
+	...	
+})
+```
+* 서버에서 보낸 데이터를 정상적으로 받아오면 then() 안에 정의한 로직이 실행되고, 데이터를 받아올 때 오류가 발생하면 catch()에 정의한 로직이 수행된다.
+* response 객체를 확인해 보면 data 속성이 일반 문자열 형식이 아니라 객체 형태이기 때문에 별도로 JSON.parse()를 사용하여 객체로 변환할 필요가 없다.  
+-> 뷰 액시오스가 뷰 리소스보다 사용성이 좋다는 것을 증명
