--- a/_posts/2021-03-02-0301-0307.md
+++ b/_posts/2021-03-02-0301-0307.md
@@ -118,3 +118,15 @@ watch: {
 ## 뷰 로더
 * 웹팩에서 지원하는 라이브러리로, 싱글 파일 컴포넌트 체계에서 사용하는 .vue 파일의 내용을 브라우저에서 실행 가능한 웹 페이지 형태로 변환해 준다.
 * 웹팩은 자바스크립트 모듈만 인식할 수 있기 때문에 뷰 로더가 .vue 파일을 자바스크립트 모듈로 변환한다.
+
+## 0302
+> 이번에 뷰를 좀 더 깊게 공부하며, 간단한 Todo-list 앱을 개발해보며 실력을 향상시키고자 했다.  
+> 평소에는 깃허브에 리포지토리를 생성하고 클론해와서 프로젝트를 진행했는데, 이번에는 이미 프로젝트를 구성하고 나중에 깃허브에 리포지토리를 생성해서 연결을 시도했다가 막혔던 부분이 있어서 해결하기 위해 노력했던 과정을 정리해보고자 한다.
+
+### 이미 생성한 프로젝트를 새로 만든 깃허브 리포지토리와 연결하기
+* `git remote add origin 연결할 리포지토리주소`  
+-> 현재 프로젝트에 리모트 저장소를 추가한다.
+* 이 상태에서 push나 pull 명령어를 사용해도 현재 프로젝트의 git 상태와 리포지토리 저장소 git 상태가 완전히 달라서 제대로 동작하지 않는다.
+* `git pull origin master --allow-unrelated-histories`  
+-> 이 명령어를 이용하면 저장소 git 히스토리와 관계없이 잘 병합하여 pull 받을 수 있다.
+* 이 상태에서 push 명령어를 이용하면 이미 생성한 프로젝트를 새로 만든 깃허브 리포지토리와 정상적으로 연결하게 된다.
