--- a/_posts/2021-03-02-0301-0307.md
+++ b/_posts/2021-03-02-0301-0307.md
@@ -208,3 +208,131 @@ components: {
 * 자바스크립트 모듈화 방법
 * 호출되기 전까지는 코드 실행과 동작을 하지 않는 특징이 있음
 * import와 export를 이용해서 모듈화한다.
+
+## 0305
+# Vuex - 상태 관리 라이브러리
+*무수히 많은 컴포넌트의 데이터를 관리하기 위한 상태 관리 패턴이자 라이브러리*
+
+### Vuex로 해결할 수 있는 문제
+1. MVC 패턴에서 발생하는 구조적 오류
+2. 컴포넌트 간 데이터 전달 명시
+3. 여러 개의 컴포넌트에서 같은 데이터를 업데이터 할 때 동기화 문제
+
+### Vuex 컨셉
+* State: 컴포넌트 간에 공유하는 데이터 data()
+* View : 데이터를 표시하는 화면 template
+* Action : 사용자의 입력에 따라 데이터를 변경하는 methods
+* View -> Actions -> State -> View (단방향)
+
+### Vuex 구조
+* 컴포넌트 -> 비동기 로직 -> 동기 로직 -> 상태
+* Vue Components -> Actions -> Mutations -> State
+* 비동기 처리는 Actions에서 다 하고 State는 Mutations에서만 변경할 수 있다.
+
+### Vuex 설치 및 등록
+
+1. `npm i vuex --save`
+2. store 폴더에 store.js 파일을 생성
+
+```javascript
+import Vue from 'vue'
+import Vuex from 'vuex'
+
+// global functionality를 사용하고 싶을 때 사용
+Vue.use(Vuex);
+
+export const store = new Vuex.Store({
+
+});
+```
+3. main.js에서 store 설정
+
+## state
+*여러  컴포넌트 간에 공유할 데이터 - 상태*
+
+```javascript
+state: {
+	message: 'Hello Vue.js'
+}
+
+// 접근
+{{ this.$store.state.message }}
+```
+
+## getters
+*state 값을 접근하는 속성이자 computed()처럼 미리 연산된 값을 접근하는 속성*
+
+```javascript
+state: {
+	num: 10
+},
+getters: {
+	getNumber(state) {
+		return state.num;
+	}
+}
+
+// 접근
+{{ this.$store.getters.getNumber }}
+```
+* 여기까지만 보면 그냥 state에 접근하는 것과 큰 이점을 느낄 수 없는데, 추후에 배우는 헬퍼 함수를 이용하면 간단하게 쓸 수 있다.
+
+## mutations
+* state의 값을 변경할 수 있는 유일한 방법이자 메서드
+* commit()으로 동작시킨다.
+* 첫 번째 인자 값으로 항상 state를 사용하는데, 이를 통해서 state 값을 변경할 수 있다.
+
+### mutations의 commit() 형식
+* state를 변경하기 위해 mutations를 동작시킬 때 인자(payload)를 전달할 수 있음
+
+```javascript
+// store.js
+state: { storeNum: 10 },
+mutations: {
+	modifyState(state, payload) {
+		console.log(payload.str);
+		return state.storeNum += payload.num;
+	}
+}
+
+// App.vue
+this.$store.commit('modifyState', {
+	str: 'passed from payload',
+	num: 20
+});
+```
+
+**state를 직접 변경하지 않고 mutations로 변경하는 이유**
+* 여러 개의 컴포넌트에서 state 값을 변경하는 경우 어느 컴포넌트에서 해당 state를 변경했는지 추적하기가 어렵다.
+* 특정 시점에 어떤 컴포넌트가 state를 접근하여 변경한 건지 확인하기 어렵기 때문
+* 따라서, 뷰의 반응성을 거스르지 않게 명시적으로 상태 변화를 수행. 반응성, 디버깅, 테스팅 혜택
+
+## actions
+* 비동기 처리 로직을 선언하는 메서드. 
+* 데이터 요청, Promise, async과 같은 비동기 처리는 모두 actions에 선언
+
+```javascript
+// store.js
+mutations: {
+	setData(state, fetchedData) {
+		state.product = fetchedData;
+	}
+},
+actions: {
+	fetchProductData(context) {
+		return axios.get('https://domain.com/products/1')
+					 .then(response => context.commit('setData', response);
+	}
+}
+
+// App.vue
+methods: {
+	getProduct() {
+		this.$store.dispatch('fetchProductData');
+	}
+}
+```
+
+**actions에 비동기 처리 로직을 선언해야 하는 이유**
+* 언제 어느 컴포넌트에서 해당 state를 호출하고, 변경했는지 확인하기가 어려움
+* 여러 개의 컴포넌트에서 mutations로 시간 차를 두고 state를 변경하는 경우 값으 변화를 추적하기 어렵기 때문에 mutations 속성에는 동기 처리 로직만 넣어야 한다.
