--- a/_posts/2021-03-02-0301-0307.md
+++ b/_posts/2021-03-02-0301-0307.md
@@ -336,3 +336,109 @@ methods: {
 **actions에 비동기 처리 로직을 선언해야 하는 이유**
 * 언제 어느 컴포넌트에서 해당 state를 호출하고, 변경했는지 확인하기가 어려움
 * 여러 개의 컴포넌트에서 mutations로 시간 차를 두고 state를 변경하는 경우 값으 변화를 추적하기 어렵기 때문에 mutations 속성에는 동기 처리 로직만 넣어야 한다.
+
+## 0306
+# Helper - 각 속성들을 더 쉽게 사용하는 방법
+* state -> mapState
+* getters -> mapGetters
+* mutations -> mapMutations
+* actions -> mapActions
+
+## 헬퍼의 사용법
+*헬퍼를 사용하고자 하는 vue 파일에서 해당 헬퍼를 로딩*
+
+```javascript
+// App.vue
+import { mapState } from 'vuex'
+import { mapGetters } from 'vuex'
+import { mapMutations } from 'vuex'
+import { mapActions } from 'vuex'
+
+export default {
+	computed() {
+		...mapState(['num']),
+		...mapGetters(['countedNum']) 
+	},
+	methods: {
+		...mapMutations(['clickBtn']), 
+		...mapActions(['asyncClickBtn']), 
+	}
+}
+```
+
+### Object Spread Operator - ...연산자
+* 객체를 ... 연산자를 이용해서 다른 객체 안에 넣으면 객체의 복사 또는 프로퍼티를 업데이트 할 수 있다.
+
+### mapState, mapGetters
+* Vuex에 선언한 state, getters 속성을 뷰 컴포넌트에 더 쉽게 연결해주는 헬퍼
+* this.$store.getters.getters이름으로 사용해야 했던 구문을 this.getters이름으로 간편하게 사용할 수 있게 등록해준다.
+
+### mapMutations, mapActions
+* mutations, actions 속성을 뷰 컴포넌트에 더 쉽게 연결해주는 헬퍼
+* Vuex에 선언한 속성을 그대로 컴포넌트에 연결하는 문법
+
+```javascript
+//  배열 리터럴
+...mapMutations([
+	'clickBtn',		// 'clickBtn': clickBtn
+	'addNumber'		// addNumber(인자)
+])
+```
+* Vuex에 선언한 속성을 컴포넌트의 특정 메서드에 연결하는 문법
+```javascript
+// 객체 리터럴
+...mapMutations({
+	popupMsg: 'clickBtn'	// 컴포넌트 메서드 명 : Store의 뮤테이션 명
+})
+```
+
+# 프로젝트 구조화와 모듈화 방법
+## 스토어 속성 모듈화
+*Vuex.Store({})의 속성을 모듈로 연결*
+```javascript
+// 가존
+import Vue from 'vue'
+import Vuex from 'vuex'
+
+export const store = new Vuex.Store({
+	state: {},
+	getters: {},
+	mutations: {},
+	actions: {}
+});
+
+// ES6의 Import & Export를 이용하여 속성별로 모듈화
+import Vue from 'vue'
+import Vuex from 'vuex'
+import * as getters from 'store/getters.js'
+import * as mutations from 'store/mutations'
+import * as actions from 'store/actions'
+
+export const store = new Vuex.Store({
+	state: {},
+	getters: getters,
+	mutations: mutations,
+	actions: actions
+});
+```
+
+## 스토어 모듈화
+*앱이 비대해져서 1개의 store로는 관리가힘들 때 modules 속성 사용*
+
+```javascript
+import Vue from 'vue'
+import Vuex from 'vuex'
+import todo from 'modules/todo.js'
+
+export const store = new Vuex.Store({
+	modules: {
+		todo
+	}
+});
+
+// todo.js
+const state = {}
+const getters = {}
+const mutations = {}
+const actions = {}
+```
