--- a/_posts/2021-03-02-0301-0307.md
+++ b/_posts/2021-03-02-0301-0307.md
@@ -442,3 +442,24 @@ const getters = {}
 const mutations = {}
 const actions = {}
 ```
+
+## 0307
+# Lombok 어노테이션
+
+### 접근자/설정자 자동 생성
+* 클래스 레벨에 `@Getter` 또는 `@Setter`를 선언해줄 경우, 모든 필드에 접근자와 설정자가 자동으로 생성
+
+### 생성자 자동 생성
+* `@NoArgsConstructor` 어노테이션은 파라미터가 없는 기본 생성자를 생성
+* `@AllArgsConstructor` 어노테이션은 모든 필드 값을 파라미터로 받는 생성자를 생성
+* `@RequiredConstructor` 어노테이션은 `final`이나 `@NonNull`인 필드 값만 파리미터로 받는 생성자를 생성
+
+### ToString 메소드 자동 생성
+* `@ToString` 어노테이션만 클래스에 붙여주면 자동으로 생성
+* `@ToString(exclude = "필드이름")` 속성을 사용하면 특정 필드를 결과에서 제외시킬 수 있다.
+
+### equals, hashCode 자동 생성
+* `EqualsAndHashCode` 어노테이션을 사용하면 자동으로 생성
+
+### @Data
+* `@Data` 어노테이션을 사용하면  `@Getter`, `@Setter`, `@RequiredConstructor`, `@ToString`, `EqualsAndHashCode` 모두 자동으로 생성된다.
