--- a/_posts/2021-03-09-0308-0314.md
+++ b/_posts/2021-03-09-0308-0314.md
@@ -81,3 +81,85 @@ static class ClientBean {
 * 별도의 라이브러리가 필요하고, 자바 표준이므로 다른 컨테이너에서도 사용 가능하다.
 
 **실무에서 웹 애플리케이션을 개발해보면, 싱글톤 빈으로 대부분의 문제를 해결할 수 있기 때문에 프로토타입 빈을 직접적으로 사용하는 일은 드물다.**
+
+## 0309
+## 웹 스코프
+* 웹 스코프는 웹 환경에서만 동작한다.
+* 프로토타입과 다르게 스프링이 해당 스코프의 종료시점까지 관리한다.
+
+### 웹 스코프 종류
+* request: HTTP 요청 하나가 들어오고 나갈 때 까지 유지되는 스코프, HTTP 요청마다 별도의 빈 인스턴스가 생성되고 관리된다.
+* session: HTTP Session과 동일한 생명주기를 가지는 스코프
+* application: 서블릿 컨텍스트와 동일한 생명주기를 가지는 스코프
+* websocket: 웹 소켓과 동일한 생명주기를 가지는 스코프
+
+```java
+@Controller
+@RequiredArgsConstructor
+public class LogDemoController {
+
+    private final LogDemoService logDemoService;
+    private final MyLogger myLogger;
+
+    @RequestMapping("log-demo")
+    @ResponseBody
+    public String logDemo(HttpServletRequest request) {
+        String requestURL = request.getRequestURL().toString();
+        myLogger.setRequestURL(requestURL);
+        myLogger.log("controller test");
+        logDemoService.logic("testId");
+        return "OK";
+    }
+}
+```
+* 스프링 애플리케이션을 실행시키면 오류가 발생한다.
+* 실행 시점에 싱글톤 빈은 생성해서 주입이 가능하지만, request 스코프 빈은 아직 생성되지 않는다.
+* 실제 고객의 요청이 와야 생성할 수 있다.
+
+### 스코프와 Provider
+*첫 번째 해결방안은 Provider를 사용하는 것이다.*
+
+```java
+@Controller
+@RequiredArgsConstructor
+public class LogDemoController {
+
+    private final LogDemoService logDemoService;
+    private final MyLogger myLogger;
+
+    @RequestMapping("log-demo")
+    @ResponseBody
+    public String logDemo(HttpServletRequest request) {
+        String requestURL = request.getRequestURL().toString();
+        myLogger.setRequestURL(requestURL);
+        myLogger.log("controller test");
+        logDemoService.logic("testId");
+        return "OK";
+    }
+}
+```
+* `ObjectProvider `덕분에 `myLoggerProvider.getObject()`를 호출하는 시점까지 request scope 빈의 생성을 지연할 수 있다.
+* 호출하는 시점에는 HTTP 요청이 진행중이므로 request scope 빈의 생성이 정상 처리된다.
+
+### 스코프와 프록시
+```java
+@Component
+@Scope(value = "request", proxyMode = ScopedProxyMode.TARGET_CLASS)
+public class MyLogger {
+```
+* 적용 대상이 인터페이스가 아닌 클래스면 `TARGET_CLASS`를 추가
+* 적용 대상이 인터페이스면 `INTERFACES`를 선택
+
+### 동작 정리
+* CGLIB라는 라이브러리로 내 클래스를 상속 받은 가짜 프록시 객체를 만들어서 주입한다.
+* 가짜 프록시 객체는 실제 요청이 오면 그때 내부에서 실제 빈을 요청하는 위임 로직이 들어있다.
+* 가짜 프록시 객체는 실제 request scope와는 관계가 없다. 단순한 위임 로직만 있고 싱글톤처럼 동작한다.
+
+### 특징
+* 프록시 객체 덕분에 클라이언트는 마치 싱글톤 빈을 사용하듯 편리하게 request scope를 사용할 수 있다.
+* 핵심 아이디어는 진짜 객체 조회를 꼭 필요한 시점까지 지연한다는 점
+* 웹 스코프가 아니어도 프록시는 사용할 수 있다.
+
+### 주의점
+* 마치 싱글톤을 사용하는 것 같지만 다르게 동작하기 때문에 결국 주의해서 사용해야 한다.
+* 이런 특별한 scope는 꼭 필요한 곳에만 최소화해서 사용하자. 무분별하게 사용하면 유지보수하기 어려워진다.
