--- a/_posts/2021-03-09-0308-0314.md
+++ b/_posts/2021-03-09-0308-0314.md
@@ -163,3 +163,64 @@ public class MyLogger {
 ### 주의점
 * 마치 싱글톤을 사용하는 것 같지만 다르게 동작하기 때문에 결국 주의해서 사용해야 한다.
 * 이런 특별한 scope는 꼭 필요한 곳에만 최소화해서 사용하자. 무분별하게 사용하면 유지보수하기 어려워진다.
+
+## 0310
+# HTTP 헤더 - 캐시와 조건부 요청
+## 캐시 기본 동작
+### 캐시가 없을 때
+* 데이터가 변경되지 않아도 계속 네트워크스를 통해서 데이터를 다운로드 받아야 한다.
+* 인터넷 네트워크는 매우 느리고 비싸서, 브라우저 로딩 속도가 느려진다.
+
+### 캐시 적용
+* 캐시 덕분에 캐시 가능 시간동안 네트워크를 사용하지 않아도 된다.
+* 브라우저 로딩 속도가 매우 빠르다.
+* 캐시 유효 시간이 초과하면, 서버를 통해 데이터를 다시 조회하고, 캐시를 갱신한다.
+* 이 때 다시 네트워크 다운로드 발생
+
+## 검증 헤더와 조건부 요청
+*캐시 유효 시간이 초과해서 서버에 다시 요청 시 두 가지 상황이 나타난다.*
+1. 서버에서 기존 데이터를 변경
+2. 서버에서 기존 데이터를 변경하지 않음
+
+### 동작 원리
+* 데이터를 전송하는 대신에 저장해 두었던 캐시를 재사용 할 수 있다.
+* 단, 클라이언트의 데이터와 서버의 데이터가 같다는 사실을 확인할 수 있는 방법 필요
+* 서버에서 데이터를 보낼 때 데이터 최종 수정일 정보를 담아서 보낸다.
+* 캐시에 최종 수정일이 저장되어, 추후에 유효기간이 끝나고 새로 요청을 할 때 캐시가 가지고 있는 데이터 최종 수정일을 보내서 서버에 있는 데이터 최종 수정일과 비교한다.
+* 바뀌지 않았으면 304 Not Modifed를 결과로 주어서 Http 헤더만 전송한다. (Http 바디 전송 X)
+* 응답 결과를 재사용하여 헤더 데이터를 갱신한다.
+* 결과적으로 네트워크 다운로드가 발생하지만 용량이 적은 헤더 정보만 다운로드하여 캐시에 저장되어 있는 데이터를 재활용할 수 있다.
+* 조건이 만족하여 데이터가 변경되었으면 200 OK와 함께 데이터를 다시 보내서 캐시에 저장한다.
+
+### 조건부 요청 해더
+* If-Modified-Sincd: Last-Modified 사용
+* If-None-Match: ETag 사용
+* If-Modified-Sincd, Last-Modified는 데이터 최종 수정일로 변경을 감지한다면, ETag는 데이터가 변경되면 이 이름을 바꾸어서 변경한다.
+* 단순하게 ETag만 보내서 같으면 유지, 다르면 다시 받을 수 있다.
+* ETag는 캐시 제어 로직을 서버에서 완전히 관리하고, 클라이언트는 단순히 이 값을 서버에 제공한다.
+
+## 캐시 제어 헤더
+### Cache-Control
+* Cache-Control: max-age
+	* 캐시 유효 시간, 초 단위
+* Cache-Control: no-cache
+	* 데이터는 캐시해도 되지만 항상 origin 서버에 검증하고 사용
+* Cache-Control: no-store
+	* 데이터에 민감한 정보가 있으므로 저장하면 안 되고, 메모리에서 사용하고 최대한 빨리 삭제
+
+## 프록시 캐시
+*예를 들어 미국에 있는 origin 서버에서 데이터를 받아온다면 긴 시간이 걸리기 때문에, 한국 어딘가에 프록시 캐시 서버를 두어서 더 빠르게 데이터를 받아올 수 있다.*
+
+* Cache-Control: public
+	* 응답이 public(프록시) 캐시에 저장되어도 됨
+* Cache-Control: private
+	* 응답이 해당 사용자만을 위한 것임 (기본 값)
+
+## 캐시 무효화
+*웹 브라우저가 임의로 캐시를 저장해버릴 수 있기 때문에 확실한 캐시 무효화 응답이 필요한 경우에 지정해 줘야 한다.*
+
+* Cache-Control: no-cache, no-store, must-revalidate
+* Pragma: no-cache
+
+### Cache-Control: must-revalidate
+* 예를 들어 no-cache는 프록시 캐시에서 네트워크가 단절되어 origin 서버에 접근이 불가한 경우 캐시 서버 설정에 따라 오류보다는 오래된 데이터라도 보여줄 수 있게 지정되어 있는 반면, must-revalidate는 origin 서버에 접근할 수 없는 경우 항상 504 오류가 발생하게 한다.
