--- a/_posts/2021-03-09-0308-0314.md
+++ b/_posts/2021-03-09-0308-0314.md
@@ -224,3 +224,40 @@ public class MyLogger {
 
 ### Cache-Control: must-revalidate
 * 예를 들어 no-cache는 프록시 캐시에서 네트워크가 단절되어 origin 서버에 접근이 불가한 경우 캐시 서버 설정에 따라 오류보다는 오래된 데이터라도 보여줄 수 있게 지정되어 있는 반면, must-revalidate는 origin 서버에 접근할 수 없는 경우 항상 504 오류가 발생하게 한다.
+
+## 0311
+# Gradle에서 Spring Boot - MySQL - Mybatis  연동 및 설정
+## 1. gradle에 의존성 추가
+```java
+// build.gradle
+implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
+runtimeOnly 'mysql:mysql-connector-java'
+```
+* `implementation 'org.springframework.boot:spring-boot-starter-jdbc'`를 설정해줘야만 데이터베이스 연결이 되는 줄 알았는데, 없어도 정상 작동하는 것을 보니 mybatis를 구현하면 자동으로 jdbc도 구현해주는 것 같다.
+* runtimeOnly: runtime 시에만 필요한 라이브러리인 경우
+* compileOnly: compile 시에만 빌드하고 빌드 결과물에는 포함하지 않음
+
+## 2. MySQL, mybatis 관련 apelication.properties 설정
+```java
+// apelication.properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://ip주소:포트번호/DB이름?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
+spring.datasource.username=사용자
+spring.datasource.password=비밀번호
+
+mybatis.type-aliases-package=jh.SimpleBoard.domain
+mybatis.mapper-locations=classpath:mybatis/query/*.xml
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
+mybatis.map-underscore-to-camel-case=true
+```
+
+## 3. DB에 쿼리를 날릴 Mapper 작성
+```java
+// *.xml 
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
+
+<mapper namespace="매핑할 mapper 경로">
+    <!-- DML 작성 -->
+</mapper>
+```
