--- a/_posts/2021-03-09-0308-0314.md
+++ b/_posts/2021-03-09-0308-0314.md
@@ -261,3 +261,96 @@ mybatis.map-underscore-to-camel-case=true
     <!-- DML 작성 -->
 </mapper>
 ```
+
+## 0312
+# slf4j + log4j2 설정
+### 의존성
+
+```java
+// build.gradle
+implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+testImplementation 'org.springframework.boot:spring-boot-starter-log4j2'
+implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16' // sql을 로그에 나타내기 위해 추가
+
+configurations {
+	  // logBack 의존성 제거
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
+}
+```
+* 기본적으로 Spring은 Slf4j라는 구현체를 손쉽게 교체할 수 있도록 도와주는 로깅 프레임워크를 사용한다.
+* Slf4j는 인터페이스고 내부 구현체로 logback을 가지고 있으므로, log4j2를 사용하기 위해 exclude 해준다.
+
+### 설정 파일
+
+```java
+// log4j2.xml
+<?xml version="1.0" encoding="UTF-8"?>
+<Configuration status="INFO">
+
+    <Properties>
+        <Property name="consoleLayout">%style{%d{ISO8601}}{black} %highlight{%-5p}{FATAL=bg_red, ERROR=red, INFO=green, DEBUG=blue}%l: %msg%n%throwable</Property>
+    </Properties>
+
+    <Appenders>
+        <Console name="console" target="SYSTEM_OUT">
+            <PatternLayout pattern="${consoleLayout}" />
+        </Console>
+    </Appenders>
+
+    <Loggers>
+
+        <Root level="info" additivity="false">
+            <AppenderRef ref="console"/>
+        </Root>
+
+        <!-- log4jdbc 옵션 설정 -->
+        <logger name="jdbc" level="OFF"/>
+        <!-- 커넥션 open close 이벤트를 로그로 남긴다. -->
+        <logger name="jdbc.connection" level="OFF"/>
+        <!-- SQL문만을 로그로 남기며, PreparedStatement일 경우 관련된 argument 값으로 대체된 SQL문이 보여진다. -->
+        <logger name="jdbc.sqlonly" level="OFF"/>
+        <!-- SQL문과 해당 SQL을 실행시키는데 수행된 시간 정보(milliseconds)를 포함한다. -->
+        <logger name="jdbc.sqltiming" level="DEBUG"/>
+        <!-- ResultSet을 제외한 모든 JDBC 호출 정보를 로그로 남긴다. 많은 양의 로그가 생성되므로 특별히 JDBC 문제를 추적해야 할 필요가 있는 경우를 제외하고는 사용을 권장하지 않는다. -->
+        <logger name="jdbc.audit" level="OFF"/>
+        <!-- ResultSet을 포함한 모든 JDBC 호출 정보를 로그로 남기므로 매우 방대한 양의 로그가 생성된다. -->
+        <logger name="jdbc.resultset" level="OFF"/>
+        <!-- SQL 결과 조회된 데이터의 table을 로그로 남긴다. -->
+        <logger name="jdbc.resultsettable" level="DEBUG"/>
+
+    </Loggers>
+</Configuration>
+```
+* Configuration: 로그 설정의 최상위 요소. 일반적으로 Properties, Appenders, Loggers 요소를 자식으로 가짐
+	* status 속성은 log4j의 내부 이벤트에 대한 로그 레벨을 의미
+* Properties: Configuration 파일에서 사용할 변수. name 속성의 값이 key, 태그 내의 값이 value가 된다.
+* Layout: Appender는 로그 이벤트를 Layout을 통해 포매팅 한다. Appender가 받은 로그 이벤트를 Layout에게 전달하면, byte 배열을 반환
+	* ex) %style{%d{yyyy/MM/dd HH:mm:ss,SSS}}{cyan} %highlight{[%-5p]}{FATAL=bg_red, ERROR=red, INFO=green, DEBUG=blue}  [%C] %style{[%t]}{yellow}- %m%n -
+* Appender: log 메세지를 특정 위치에 전달해주는 역할을 한다.
+	* layout을 통해 로그를 formatting 하고, 어떤 방식으로 로그를 제공할지 결정
+* Logger: 로깅을 직접 하는 요소. 패키지 별로 설정 가능
+	* Root 패키지의 로거는 필수적이고, 추가적인 로거는 Logger로 설정 가능
+
+### application.properties
+
+```java
+// application.properties
+logging.config=classpath:log4j2.xml
+```
+
+### jdbc spy 로깅 이벤트를 slf4j가 받도록 처리
+
+```java
+// log4jdbc.log4j2.properties
+# log4jdbc spy의 로그 이벤트를 slf4j를 통해 처리한다. 
+log4jdbc.spylogdelegator.name=net.sf.log4jdbc.log.slf4j.Slf4jSpyLogDelegator 
+
+# 로그를 표시할 줄의 제한, 0은 무제한 
+log4jdbc.dump.sql.maxlinelength=0
+ 
+# log4jdbc의 드라이브 클래스 설정 
+log4jdbc.drivers=com.mysql.cj.jdbc.Driver 
+log4jdbc.auto.load.popular.drivers=false
+```
