--- a/_posts/2021-03-09-0308-0314.md
+++ b/_posts/2021-03-09-0308-0314.md
@@ -354,3 +354,49 @@ log4jdbc.dump.sql.maxlinelength=0
 log4jdbc.drivers=com.mysql.cj.jdbc.Driver 
 log4jdbc.auto.load.popular.drivers=false
 ```
+
+## 0313
+# 인터셉터
+*클라이언트로부터 요청이 들어오면, Filter가 있다면 Filter를 수행한 후, DispatcherServlet을 수행한다. 즉, 필터는 요청이나 응답이 처리되기 전 거치는 것*
+
+* DispatcherServlet은 선처리 작업할 것이 존재하면 선처리 작업을 해주고, HandlerMapping을 통해 실제 어떤 Handler가 동작을 해야 되는지 알아내고, Handler를 실행시킨다.
+* DispatcherServlet와 Handler 사이에 HandlerInterceptor라고 하는 것이 있다.
+* 인터셉터는 DispatcherServlet에서 Handler로 요청을 보낼 때, Handler에서 DispatcherServlet로 응답을 보낼 때 동작한다.
+* 인터셉터로 컨트롤러 실행 전과 후에 공통 로직을 처리할 수 있다.
+
+## 인터셉터 작성하는 방법
+1. org.springframework.web.servlet.HandlerInterceptor 인터페이스를 구현한다.
+2. preHandle, postHandle 메서드를 오버라이드 해서 공통 로직을 정의한다.
+```java
+public class BaseHandlerInterceptor implements HandlerInterceptor {
+
+    Logger logger = LoggerFactory.getLogger(getClass());
+
+    @Override
+    public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
+        logger.info("preHandle requestURI : {}", request.getRequestURI());
+        return true;
+    }
+
+    @Override
+    public void postHandle(HttpServletRequest request, HttpServletResponse response, Object handler,
+                           ModelAndView modelAndView) throws Exception {
+        logger.info("postHandle requestURI : {}", request.getRequestURI());
+    }
+}
+```
+3. Java Config를 사용한다면, WebMvcConfigurer가 가지고 있는 addInterceptors 메서드를 오버라이딩 하고 등록하는 과정을 거친다.
+```java
+@Configuration
+public class WebConfiguration implements WebMvcConfigurer {
+    @Bean
+    public BaseHandlerInterceptor baseHandlerInterceptor() {
+        return new BaseHandlerInterceptor();
+    }
+
+    @Override
+    public void addInterceptors(InterceptorRegistry registry) {
+        registry.addInterceptor(baseHandlerInterceptor());
+    }
+}
+```
