--- a/_posts/2021-03-09-0308-0314.md
+++ b/_posts/2021-03-09-0308-0314.md
@@ -400,3 +400,49 @@ public class WebConfiguration implements WebMvcConfigurer {
     }
 }
 ```
+
+## 0314
+# enum 활용
+## Enum class
+*상수를 정의하여 코딩하는 경우의 문제점들을 보완하기 위해 새로 추가한 것으로, 열거형이라고 불리며 서로 연관된 상수들의 집합*
+
+### 장점
+1. 코드가 단순해지며, 가독성이 좋다.
+2. 인스턴스 생성과 상속을 방지하여 상수값의 타입안정성이 보장한다.
+3. enum class를 사용해 새로운 상수들의 타입을 정의함으로 정의한 타입이외의 타입을 가진 데이터값을 컴파일시 체크한다.
+4. enum 키워드를 사용하기 때문에 구현 의도가 열거임을 분명하게 알 수 있다.
+
+### 선언
+```java
+public class DevType {
+	MOBILE, WEB, SERVER
+}
+```
+* 열거형으로 선언된 순서에 따라 0부터 인덱스 값을 가진다. 순차적으로 증가
+* enum 열거형으로 지정된 상수들은 모두 대문자로 선언
+* 열거형 변수들을 선언한 후 세미콜론은 찍지 않는다. 그러나 상수와 연관된 문자를 연결시킬 경우 세미콜론을 찍는다.
+
+### Enum 메소드
+1. values(): 열거된 모든 원소를 배열에 담아 순서대로 리턴
+2. ordinal(): 원소에 열거된 순서를 정수 값으로 리턴
+3. valueOf(): 매개변수로 주어진 String과 열거형에서 일치하는 이름을 갖는 원소를 리턴
+
+### 열거형 상수를 다른 값과 연결하기
+* 열거형 상수와 관련된 값을 생성자를 통해 연결시킬 경우 세미콜론을 붙여야 함
+```java
+enum DevType {
+    //상수("연관시킬 문자") <- 이땐 줄 끝에 세미콜론 (;) 붙이기.
+    MOBILE("안드로이드"), WEB("스프링"), SERVER("리눅스");
+     
+    final private String name;
+     
+    public String getName() {
+        return name;
+    }
+ 
+    private DevType(String name){
+        this.name = name;
+    }    
+}
+```
+* 생성자를 private로 막아줘야 다른곳에서 동적으로 변화시킬 수 없게끔 한다.
