--- a/_posts/2021-03-18-0315-0321.md
+++ b/_posts/2021-03-18-0315-0321.md
@@ -27,3 +27,6 @@ public String test(@PathVariable("email") String email) {
 
 ### @ModelAttribute
 * @RequestParam을 사용하고 DTO/VO와 같이 객체 전체를 받을 경우 사용한다.
+
+## 0316 ~ 0318
+새로운 노트북 macboook m1에 환경설정을 하고 jekyll을 설치하는데 시간을 보냈다.
