--- a/_posts/2021-03-18-0315-0321.md
+++ b/_posts/2021-03-18-0315-0321.md
@@ -30,3 +30,44 @@ public String test(@PathVariable("email") String email) {
 
 ## 0316 ~ 0318
 새로운 노트북 macboook m1에 환경설정을 하고 jekyll을 설치하는데 시간을 보냈다.
+
+## 0319
+# 예외처리
+*기타 여러 예외 처리들을 적용하다보면 코드가 엄청나게 복잡해져서 비즈니스 로직에 집중하기가 어렵다.*
+-> 이런 문제를 개선하기 위해 @ExceptionHandler와 @ControllerAdvice를 사용한다.
+
+## @ExceptionHandler
+*@Controller @RestController가 적용된 Bean내에서 발생하는 예외를 잡아서 하나의 메서드에서 처리해주는 기능을 한다.*
+```java
+@RestController public class MyRestController { 
+	... 
+	... 
+	@ExceptionHandler(NullPointerException.class) 
+	public Object nullex(Exception e) { 
+		System.err.println(e.getClass()); 
+		return "myService"; 
+	} 
+}
+```
+* ExceptionHandler라는 어노테이션을 쓰고 인자로 캐치하고 싶은 예외클래스를 등록해주면 된다.
+* @ExceptionHandler({ Exception1.class, Exception2.class}) 이런식으로 두 개 이상 등록도 가능하다.
+
+### 특징
+* Controller, RestController에만 적용가능하다.
+* 리턴 타입은 자유롭게 해도 된다.
+* @ExceptionHandler를 등록한 Controller에만 적용된다. 다른 Controller에서 NullPointerException이 발생하더라도 예외를 처리할 수 없다.
+
+## ControllerAdvice
+*@ExceptionHandler가 하나의 클래스에 대한 것이라면, @ControllerAdvice는 모든 @Controller 즉, 전역에서 발생할 수 있는 예외를 잡아 처리해주는 annotation이다.*
+```java
+@RestControllerAdvice 
+public class MyAdvice { 
+	@ExceptionHandler(CustomException.class) 
+	public String custom() { 
+		return "hello custom"; 
+	} 
+}
+```
+* 클래스파일을 만들어서 annotation을 붙이기만 하면 된다. 그 다음에 @ExceptionHandler로 처리하고 싶은 예외를 잡아 처리하면 된다.
+* 별도의 속성값이 없이 사용하면 모든 패키지 전역에 있는 컨트롤러를 담당하게 된다.
+* @RestControllerAdvice와 @ControllerAdvice가 존재하는데 ViewResolver를 통해서 예외 처리 페이지로 리다이렉트 시키려면 @ControllerAdvice만 써도 되고, API서버여서 에러 응답으로 객체를 리턴해야한다면 @ResponseBody 어노테이션이 추가된 @RestControllerAdvice를 적용하면 된다.
