--- a/_posts/2021-03-18-0315-0321.md
+++ b/_posts/2021-03-18-0315-0321.md
@@ -71,3 +71,26 @@ public class MyAdvice {
 * 클래스파일을 만들어서 annotation을 붙이기만 하면 된다. 그 다음에 @ExceptionHandler로 처리하고 싶은 예외를 잡아 처리하면 된다.
 * 별도의 속성값이 없이 사용하면 모든 패키지 전역에 있는 컨트롤러를 담당하게 된다.
 * @RestControllerAdvice와 @ControllerAdvice가 존재하는데 ViewResolver를 통해서 예외 처리 페이지로 리다이렉트 시키려면 @ControllerAdvice만 써도 되고, API서버여서 에러 응답으로 객체를 리턴해야한다면 @ResponseBody 어노테이션이 추가된 @RestControllerAdvice를 적용하면 된다.
+
+## 0320
+# MessageSource
+*ApplicationContext가 상속받는 것중 하나로 메시지 설정 파일을 모아 놓고 각 국가에 맞는 메시지를 제공할 수 있다.*
+
+* Spring Boot에서는 ResourceBundleMessageSource가 Bean으로 등록되어 있어 .properties만 설정되어 있으면 메시지를 가져와 사용할 수 있다.
+
+```java
+//messages.properties
+greeting=Hello, my name is {0}
+
+//message_ko_KR.properties
+greeting=안녕하세요, 제 이름은 {0}
+
+//Runner
+MessageSource.getMessage("greeting", new String[]{"richard"}, Locale.KOREA);
+```
+
+## MessageSource.getMessage
+* `MessageSource.getMessage(String code, Object[] args, String default, Locale loc);`  
+-> 가장 기본적인 것으로, 특정 로케일 내에서 발견되는 메시지가 없으면 default message가 반환된다.
+* `MessageSource.getMessage(String code, Object[] args, Locale loc);`  
+-> 해당 메소드는 default message가 없어 특정 로케일 내에서 발견되는 메시지가 없으면 NoSuchMessageException이 발생한다.
