--- a/_posts/2021-03-24-0322-0328.md
+++ b/_posts/2021-03-24-0322-0328.md
@@ -95,3 +95,89 @@ SecretKey key = Keys.secretKeyFor(SignatureAlgorithm.HS256); //or HS384 or HS512
 String secretString = Encoders.BASE64.encode(key.getEncoded());
 ```
 *  Base64 인코딩은 암호화가 아니므로 여전히 민감한 정보로 간주되어 안전한 곳에 저장해야 한다.
+
+## 0323
+## JWS 생성
+```java
+String jws = Jwts.builder() // (1)
+    .setSubject("Bob")      // (2) 
+    .signWith(key)          // (3)
+    .compact();             // (4)
+```
+1. Jwts.builder() 메서드를 사용하여 JwtBuilder 인스턴스를 생성한다.
+2. 원하는대로 헤더 매개 변수와 클레임을 추가하는 메서드를 호출한다.
+3. JWT에 서명하는 데 사용할 SecretKey를 지정한다.
+4. compact() 메서드를 호출하여 압축하고 서명하여 최종 JWS를 생성한다.
+
+### 헤더 매개 변수
+*JWT 헤더는 JWT의 클레임과 관련된 콘텐츠, 형식 및 암호화 작업에 대한 메타 데이터를 제공한다.*
+
+```java
+Map<String,Object> header = getMyHeaderMap(); //implement me
+String jws = Jwts.builder()
+    .setHeader(header)
+    // ... etc ...
+```
+* 헤더를 설정하는 데는 헤더 인스턴스를 사용하는 방법과, 헤더 맵을 사용하는 방법이 있는데 나는 한 번에 처리할 수 있는 헤더 맵을 사용하여 설정하였다.
+
+### Claims
+*클레임은 JWT의 본문(페이로드)이며 JWT 작성자가 JWT 수신자에게 제공하기를 원하는 정보를 포함한다.*
+
+**표준 클레임**
+* `setIssuer`: 발행자 클레임을 설정한다.
+* `setSubject`: 주제를 설정한다.
+* `setAudience`: 받는 사람을 설정한다.
+* `setExpiration`: 만료 시간을 설정한다.
+* `setNotBefore`: 동작하지 않는 시간을 설정한다.
+* `setIssuedAt`: 발급 시간을 설정한다.
+* `setId`: 아이디를 설정한다.
+
+```java
+Map<String,Object> claims = getMyClaimsMap(); //implement me
+String jws = Jwts.builder()
+    .setClaims(claims)
+    // ... etc ...
+```
+
+### Signing Key
+* JwtBuilder의 `signWith`메서드 를 호출하여 서명 키를 지정하고 JJWT가 지정된 키에 허용되는 가장 안전한 알고리즘을 결정 하도록하는 것이 좋다.
+```java
+String jws = Jwts.builder()
+   // ... etc ...
+   .signWith(key) // <---
+   .compact();
+```
+* signWith JJWT를 사용할 때 alg관련 알고리즘 식별자와 함께 필요한 헤더도 자동으로 설정됩니다 .
+
+### SecretKey 형식
+* 만약에 사용자가 HMAC-SHA 알고리즘으로 JWS를 서명하기 원하고, 사용자가 String 형식 혹은 인코딩 된 byte 배열 형태의 비밀 키를 가지고 있다면, 사용자는 그것을 signWith 메서드 매개변수로서 사용하기 위해 ScreteKey 객체로 변환해야 한다.
+
+## Reading a JWS
+1. JwtParserBuilder 객체를 생성하기 위해서 Jwts.parseBuilder() 메서드를 사용한다.
+2. JWS 서명을 증명하기 위해 사용하고 싶은 SecretKey 혹은 비대칭 PubliKey를 명세한다.
+3. 쓰레드에 안전한 JwtParser를 리턴하기 위해 JwtParserBuilder에 build() 메서드를 호출한다.
+4. parseClaimsJws(String) 메서드를 원본 JWS를 만드는 jws String와 함께 호출한다.
+5. 파싱이나 서명 유효성이 실패하는 경우에 try/catch 블록 안에서 모든 호출이 래핑된다. 
+
+```java
+Jws<Claims> jws;
+
+try {
+    jws = Jwts.parserBuilder()  // (1)
+    .setSigningKey(key)         // (2)
+    .build()                    // (3)
+    .parseClaimsJws(jwsString); // (4)
+    
+    // we can safely trust the JWT
+     
+catch (JwtException ex) {       // (5)
+    
+    // we *cannot* use the JWT as intended by its creator
+}
+```
+* 주의: 만약 JWS를 기대한다면, 항상 JwtParser의 parseClaimsJws 메서드를 호출하여라.
+
+### 검증 키
+* JWS를 읽을 때 가장 중요한 것은 JWS의 암호화된 signature을 증명하기 위해서 키를 명세하는 것.
+* signature 증명이 실패하면, JWT는 안전하게 신뢰될 수 없으며 폐기 되어야만 한다.
+* 만약 jws가 SecretKey로 서명되었다면, 같은 SecretKey는 JwtParserBuilder에 명세되어야 한다.
