--- a/_posts/2021-03-24-0322-0328.md
+++ b/_posts/2021-03-24-0322-0328.md
@@ -181,3 +181,68 @@ catch (JwtException ex) {       // (5)
 * JWS를 읽을 때 가장 중요한 것은 JWS의 암호화된 signature을 증명하기 위해서 키를 명세하는 것.
 * signature 증명이 실패하면, JWT는 안전하게 신뢰될 수 없으며 폐기 되어야만 한다.
 * 만약 jws가 SecretKey로 서명되었다면, 같은 SecretKey는 JwtParserBuilder에 명세되어야 한다.
+
+## 0324
+# 쿠키
+## 동작방식
+1. 쿠키 생성 단계
+	* 생성한 쿠키를  응답 데이터의 헤더에 저장하여 웹브라우저에 전송
+	* 사용자가 request 보내면, 서버가 response하는 시점에 setCookieHeader 라는걸 통해서 response
+	* 브라우저가 응답 헤더를 보고 쿠키를 만든다.
+2. 쿠키 저장 단계
+	* 웹 브라우저는 응답데이터에 포함된 쿠키를 쿠키 저장소에 보관
+3. 쿠키 전송 단계
+	* 웹 브라우저는 저장한 쿠키를 요청이 있을 때마다 웹 서버에 전송
+	* 사용자가 웹서버에 요청할 때마다, 요청한 url에 맞는 저장된 유효한 쿠키가 있는지부터 확인해서 쿠키를 요청시에 함께 보냄
+	* 웹 서버는 브라우저가 전송한 쿠키를 사용하여 필요한 작업을 수행
+
+## 쿠키 설정
+### 쿠키 객체 생성
+`Cookie cookie = new Cookie("key값", "value값");`
+* 한글을 사용할 시에는 URLEncoder.encode()를 사용하여 인코딩 처리를 해준다.
+
+### 쿠키 유효 시간 설정
+`cookie.setMaxAge(60 * 60 * 24);`
+* 초 단위로 지정한다.
+* 지정하지 않으면 브라우저를 종료할 때 쿠키를 함께 삭제한다.
+
+### 패스
+`cookie.setPath("/");`
+* 쿠키는 쿠키 데이터를 생성한 웹 페이지에서만 데이터를 읽을 수 있지만, Path를 지정해주면 그 이하의 경로에서 쿠키 데이터를 공유할 수 있다.
+
+### 도메인
+`cookie.setDomain("");`
+* 패스가 하나의 사이트에서 쿠키 데이터를 읽고 쓰는 권한을 설정하는 것이라면, 도메인 항목은 도메인 단위에서 쿠키 데이터를 읽고 쓰는 권한을 설정하게 된다.
+
+### 보안
+`cookie.setHttpOnly(true);`
+* **HttpOnly**는 자바스크립트의 **document.cookie**를 이용 해 쿠키에 접속하는 것을 막는 옵션이다.
+`cookie.setSecure(true)`
+* 웹 브라우저와 웹 서버가 **HTTPS**로 통신하는 경우에만 웹 브라우저가 쿠키를 서버로 전송하는 옵션이다.
+
+### 응답 헤더에 쿠키 객체를 추가
+`response.addCookie(cookie);`
+
+## 쿠키 조회
+```java
+Cookie[] cookies = request.getCookies();
+
+if(cookies != null) {
+	for(Cookie cookie: cookies) {
+		System.out.println("쿠키 명: " + cookie.getName());
+		System.out.println("쿠키 값: " + cookie.getValue());
+	}
+}
+```
+
+## 쿠키 삭제
+```java
+Cookie[] cookies = request.getCookies();
+
+if(cookies != null) {
+	for(Cookie cookie: cookies) {
+		cookie.setMaxAge(0); 		  // 유효시간을 0으로 설정
+		response.addCookie(cookie); // 응답 헤더에 추가
+	}
+}
+```
