--- a/_posts/2021-03-24-0322-0328.md
+++ b/_posts/2021-03-24-0322-0328.md
@@ -246,3 +246,50 @@ if(cookies != null) {
 	}
 }
 ```
+
+## 0325
+# Mabatis
+## SelectKey
+*INSERT 수행 이전, 이후에 생성하거나 알 수 있는 값이 필요한 경우 사용*
+
+* DB에 명령을 한 번만 보내어, 입력한 값으 결과값을 다음 쿼리로 바로 return 시켜준다.
+
+### 속성
+* keyProperty  
+-> selectKey 구문의 결과가 세팅될 대상 프로퍼티
+* keyColumn  
+-> 리턴되는 결과셋의 칼럼명은 프로퍼티에 일치한다. 여러 개의 컬럼을 사용한다면 컬럼명의 목록은 콤마를 사용해서 구분
+* resultType  
+-> 결과의 타입. String을 포함하여 키로 사용될 수 있는 간단한 타입을 허용한다.
+* order  
+-> BEFORE 또는 AFTER를 세팅할 수 있다.
+	* BEFORE로 설정하면 키를 먼저 조회하고 그 값을 keyProperty에 세팅한 뒤 insert 구문을 실행
+	* AFTER로 설정하면 insert 구문을 실행한 뒤 selectKey 구문을 실행한다.
+
+### Insert 후 ID 받아오기
+* LAST_INSERT_ID()를 사용하면 된다.
+
+```xml
+<!-- 게시물 작성 -->
+<insert id="save" parameterType="Board">
+    INSERT INTO BOARD
+    (
+        MEMBER_NO,
+        TITLE,
+        CONTENT,
+        REG_DATE
+    )
+    VALUES
+    (
+        #{memberNo},
+        #{title},
+        #{content},
+        NOW()
+    )
+    <selectKey keyProperty="boardNo" resultType="long" order="AFTER">
+        SELECT LAST_INSERT_ID()
+    </selectKey>
+</insert>
+```
+* 이 때, 리턴값은 parameterType에 넘겨준 객체에 넘어간다.
+* 즉, 위에서는 이 메소드를 호출한 클래스에서 파라미터로 넘긴 board에서 바로 board.getBoardNo()로 해당값을 가져올 수 있다.
