--- a/_posts/2021-03-24-0322-0328.md
+++ b/_posts/2021-03-24-0322-0328.md
@@ -293,3 +293,102 @@ if(cookies != null) {
 ```
 * 이 때, 리턴값은 parameterType에 넘겨준 객체에 넘어간다.
 * 즉, 위에서는 이 메소드를 호출한 클래스에서 파라미터로 넘긴 board에서 바로 board.getBoardNo()로 해당값을 가져올 수 있다.
+
+## 0326
+# 게시글 생성 API 작성
+## 컨트롤러 - 서비스 - 매퍼
+```java
+// Controller
+@RequiredArgsConstructor
+@RestController
+@RequestMapping("/boards")
+public class BoardController {
+
+    private final BoardService boardService;
+
+    /**
+     * 게시글 생성
+     * @param board
+     * @param request
+     * @return
+     */
+    @PostMapping("/new")
+    public BaseResponse insertBoard(@RequestBody Board board, HttpServletRequest request) {
+        // 글제목 필수 체크
+        if (isEmpty(board.getTitle())) {
+            throw new BaseException(BaseResponseCode.CODE_100, new String[]{"글제목"});
+        }
+        // 글내용 필수 체크
+        if (isEmpty(board.getContent())) {
+            throw new BaseException(BaseResponseCode.CODE_100, new String[]{"글내용"});
+        }
+
+        // request에 저장한 id를 받아와서 Board 객체에 값을 넣어준다.
+        long memberNo = getMemberNo(request);
+        board.setMemberNo(memberNo);
+
+        long boardNo = boardService.insertBoard(board);
+        Map<String, Object> ret = new HashMap();
+        ret.put("boardNo", boardNo);
+
+        return new BaseResponse(ret);
+    }
+}
+
+// Service
+public interface BoardService {
+
+    long insertBoard(Board board);
+}
+
+// ServiceImpl
+@Service
+@Transactional
+@RequiredArgsConstructor
+public class BoardServiceImpl implements BoardService {
+
+    private final BoardMapper boardMapper;
+
+    @Override
+    public long insertBoard(Board board) {
+        boardMapper.save(board);
+        return board.getBoardNo();
+    }
+}
+
+// Mapper
+@Repository
+@Mapper
+public interface BoardMapper {
+
+    long save(Board board);
+}
+```
+* 제목과 내용은 필수로 입력받도록 해서 없을 경우 에러 메시지를 반환하도록 처리하였다.
+* jwt 토큰 처리를 해서 request에 사용자 id를 저장해두고 받아와서 새 게시글 db에 사용자 정보가 삽입될 수 있도록 했다.
+* 반환 값으로는 게시글 번호를 반환하여 reponse로 보내주었다.
+
+## mybatis query
+```xml
+<!-- 게시글 작성 -->
+<insert id="save" parameterType="Board">
+    INSERT INTO BOARD
+    (
+        MEMBER_NO,
+        TITLE,
+        CONTENT,
+        REG_DATE
+    )
+    VALUES
+    (
+        #{memberNo},
+        #{title},
+        #{content},
+        NOW()
+    )
+    <selectKey keyProperty="boardNo" resultType="long" order="AFTER">
+        SELECT LAST_INSERT_ID()
+    </selectKey>
+</insert>
+``` 
+* <selectKey>를 사용하여 반환 값으로 pk 값을 반환해주도록 하였다.
