--- a/_posts/2021-03-24-0322-0328.md
+++ b/_posts/2021-03-24-0322-0328.md
@@ -454,3 +454,84 @@ public BaseResponse getBoard(@PathVariable("boardNo") long boardNo) {
     }
 }
 ```
+
+## 0328
+# 게시글 수정, 삭제 API 작성
+## 게시글 수정 API
+```java
+/**
+* 게시글 수정
+* @param boardNo
+* @param board
+* @param request
+* @return
+*/
+@PostMapping("/{boardNo}/edit")
+public BaseResponse updateBoard(@PathVariable("boardNo") long boardNo, @RequestBody Board board, HttpServletRequest request) {
+
+    // 글제목 필수 체크
+    if (isEmpty(board.getTitle())) {
+        throw new BaseException(BaseResponseCode.CODE_100, new String[]{"글제목"});
+    }
+    // 글내용 필수 체크
+    if (isEmpty(board.getContent())) {
+        throw new BaseException(BaseResponseCode.CODE_100, new String[]{"글내용"});
+    }
+
+    // 현재 로그인한 회원 번호와 게시글 작성한 회원 번호를 비교해서 다른 경우에 예외 발생
+    Board info = boardService.getBoard(boardNo);
+    long memberNo = getMemberNo(request);
+    if (memberNo != info.getMemberNo()) {
+        throw new BaseException(BaseResponseCode.CODE_103);
+    }
+
+    board.setBoardNo(boardNo);
+    boardService.updateBoard(board);
+
+    return new BaseResponse();
+}
+```
+
+## 게시글 삭제 API
+```java
+/**
+* 게시글 삭제
+* @param boardNo
+* @param request
+* @return
+*/
+@PostMapping("/{boardNo}/delete")
+public BaseResponse deleteBoard(@PathVariable("boardNo") long boardNo, HttpServletRequest request) {
+
+    // 현재 로그인한 회원 번호와 게시글 작성한 회원 번호를 비교해서 다른 경우에 예외 발생
+    Board info = boardService.getBoard(boardNo);
+    long memberNo = getMemberNo(request);
+    if (memberNo != info.getMemberNo()) {
+        throw new BaseException(BaseResponseCode.CODE_103);
+    }
+
+    boardService.deleteBoard(boardNo);
+
+    return new BaseResponse();
+}
+```
+
+## mybatis query
+```xml
+<!-- 게시글 수정 -->
+<update id="updateBoard" parameterType="Board">
+    UPDATE BOARD
+    SET
+        TITLE = #{title},
+        CONTENT = #{content}
+    WHERE BOARD_NO = #{boardNo}
+</update>
+
+<!-- 게시글 삭제 -->
+<delete id="deleteBoard" parameterType="long">
+    DELETE FROM BOARD
+    WHERE BOARD_NO = #{boardNo}
+</delete>
+```
+* 게시글을 수정하고 삭제할 수 있는 API를 작성하였다.
+* 현재 로그인한 회원 정보와 요청 받은 게시물을 작성한 회원 정보를 비교해서 다른 경우에는 예외를 발생시켰다.
