--- a/_posts/2021-03-31-0329-0404.md
+++ b/_posts/2021-03-31-0329-0404.md
@@ -112,3 +112,96 @@ int getTotalCnt();
 * `OFFSET`은 출력을 시작할 위치, `LIMIT`은 반환할 개수를 지정한다.
 * 여러 개의 레코드를 List 타입으로 받으면 하나의 레코드가 각각 add된다.
 * 총 목록의 개수도 조회하여 반환할 map에 삽입한다.
+
+## 0330
+# 게시글 검색 목록 API
+
+*검색 기능을 넣기 위해 검색어를 입력하면 제목, 내용에서 같은 단어가 있는 게시글만 목록으로 반환할 수 있도록 페이징 처리하여 구현하였다.*
+
+## 컨트롤러 - 서비스 - 매퍼
+```java
+// Controller
+/**
+* 게시글 검색
+* @param criteria
+* @return
+*/
+@GetMapping("/searchLists")
+public BaseResponse getSearchList(@ModelAttribute Criteria criteria) {
+
+    // 리턴 값의 순서를 보장하기 위해 LinkedHashMap으로 구현
+    Map<String, Object> data = new LinkedHashMap<>();
+
+    Map<String, Object> result = boardService.getSearchList(criteria);
+
+    data.put("searchWord", criteria.getSearchWord());
+    data.put("currentPageNo", criteria.getCurrentPageNo());
+    data.put("recordsPerPage", criteria.getRecordsPerPage());
+    data.put("totalCnt", result.get("totalCnt"));
+    data.put("list", result.get("list"));
+
+    return new BaseResponse(data);
+}
+
+// Service
+@Override
+public Map<String, Object> getSearchList(Criteria criteria) {
+    Map<String, Object> result = new HashMap<>();
+    List<Board> list = new ArrayList<>();
+
+    // 검색어가 없는 경우에는 빈 리스트와 개수 반환
+    if (ObjectUtils.isEmpty(criteria.getSearchWord())) {
+        result.put("totalCnt", 0);
+        result.put("list", list);
+
+        return result;
+    }
+
+    list = boardMapper.getSearchList(criteria);
+    int totalCnt = boardMapper.getSearchTotalCnt(criteria.getSearchWord());
+
+    result.put("totalCnt", totalCnt);
+    result.put("list", list);
+
+    return result;
+}
+
+// Mapper
+List<Board> getSearchList(Criteria criteria);
+
+int getSearchTotalCnt(String searchWord);
+```
+
+## mybatis query
+```xml
+<!-- 검색어로 게시글 목록 조회 -->
+<select id="getSearchList" parameterType="Criteria" resultType="Board">
+    SELECT
+        B.BOARD_NO,
+        A.MEMBER_NO,
+        A.MEMBER_NAME,
+        B.TITLE,
+        B.CONTENT,
+        B.COMMENT_CNT,
+        B.LIKE_CNT,
+        B.REG_DATE
+    FROM MEMBER A INNER JOIN BOARD B ON A.MEMBER_NO = B.MEMBER_NO
+    WHERE
+        title LIKE CONCAT('%', #{searchWord}, '%') OR
+        content LIKE CONCAT('%', #{searchWord}, '%')
+    ORDER BY B.BOARD_NO DESC
+    LIMIT #{recordsPerPage} OFFSET #{startPage}
+</select>
+
+<!-- 검색어로 조회된 전체 게시글 개수 반환 -->
+<select id="getSearchTotalCnt" parameterType="String" resultType="int">
+    SELECT COUNT(*)
+    FROM BOARD
+    WHERE
+        title LIKE CONCAT('%', #{searchWord}, '%') OR
+        content LIKE CONCAT('%', #{searchWord}, '%')
+</select>
+```
+* query에서 페이징 처리를 하기 위해 다른 기능은 그대로 둔 채, where 절에 searchWord와 비교하여 searchWord가 제목이나 본문에 포함되어 있는 게시글 목록을 반환하였다.
+* 다른 기능은 기본 목록 반환과 비슷하다.
+* 검색어를 입력하지 않고 호출한 경우에는 전체 목록이 출력되므로, Service단에서 검색어가 없는 경우는 빈 리스트와 0개의 개수가 반환되도록 처리해주었다.
