--- a/_posts/2021-03-31-0329-0404.md
+++ b/_posts/2021-03-31-0329-0404.md
@@ -205,3 +205,145 @@ int getSearchTotalCnt(String searchWord);
 * query에서 페이징 처리를 하기 위해 다른 기능은 그대로 둔 채, where 절에 searchWord와 비교하여 searchWord가 제목이나 본문에 포함되어 있는 게시글 목록을 반환하였다.
 * 다른 기능은 기본 목록 반환과 비슷하다.
 * 검색어를 입력하지 않고 호출한 경우에는 전체 목록이 출력되므로, Service단에서 검색어가 없는 경우는 빈 리스트와 0개의 개수가 반환되도록 처리해주었다.
+
+## 0331
+# 댓글 입력, 삭제 API
+*댓글 기능을 구현하기 위해서는 기존 게시글 입력, 삭제 기능과 비슷하지만 고려해야할 사항이 더 있었다.*
+
+1. 게시글 삭제 시, 게시글 안에 있는 댓글까지 DB에서 삭제
+2. 댓글 입력 및 삭제 시 Board DB에서 comment_cnt 컬럼 값 증가 및 감소   
+
+## 컨트롤러 - 서비스 - 매퍼
+```java
+// Controller
+/**
+* 댓글 입력
+* @param comment
+* @param request
+* @return
+*/
+@PostMapping("/new")
+public BaseResponse insertComment(@RequestBody Comment comment, HttpServletRequest request) {
+    // 글번호 필수 체크
+    if (comment.getBoardNo() == 0) {
+        throw new BaseException(BaseResponseCode.CODE_100, new String[]{"글번호"});
+    }
+    // 댓글내용 필수 체크
+    if (isEmpty(comment.getContent())) {
+        throw new BaseException(BaseResponseCode.CODE_100, new String[]{"댓글내용"});
+    }
+
+    // request에 저장한 id를 받아와서 Comment 객체에 값을 넣어준다.
+    long memberNo = getMemberNo(request);
+    comment.setMemberNo(memberNo);
+
+    long commentNo = commentService.insertComment(comment);
+    Map<String, Object> data = new HashMap();
+    data.put("commentNo", commentNo);
+
+    return new BaseResponse(data);
+}
+
+/**
+* 댓글 삭제
+* @param commentNo
+* @param request
+* @return
+*/
+@PostMapping("/{commentNo}/delete")
+public BaseResponse deleteBoard(@PathVariable("commentNo") long commentNo, HttpServletRequest request) {
+
+    // 현재 로그인한 회원 번호와 댓글을 작성한 회원 번호를 비교해서 다른 경우에 예외 발생
+    Comment info = commentService.getComment(commentNo);
+    long memberNo = getMemberNo(request);
+    if (memberNo != info.getMemberNo()) {
+        throw new BaseException(BaseResponseCode.CODE_103);
+    }
+
+    commentService.deleteComment(commentNo);
+
+    return new BaseResponse();
+}
+
+// Service
+@Override
+public long insertComment(Comment comment) {
+    // 댓글 추가 시 댓글 수 1 증가
+    commentMapper.save(comment);
+    boardMapper.updateCommentCnt(comment.getBoardNo(), 1);
+    return comment.getCommentNo();
+}
+
+@Override
+public Comment getComment(long commentNo) {
+    return commentMapper.getComment(commentNo);
+}
+
+@Override
+public void deleteComment(long commentNo) {
+    // 댓글 번호로 게시글 번호 조회해서 댓글 삭제 시 댓글 수 1 감소
+    long boardNo = commentMapper.getComment(commentNo).getBoardNo();
+    commentMapper.deleteComment(commentNo);
+    boardMapper.updateCommentCnt(boardNo, -1);
+}
+
+// Mapper
+void save(Comment comment);
+
+Comment getComment(long commentNo);
+
+void deleteComment(long commentNo);
+
+void deleteBoardComment(long boardNo);
+```
+
+## mybatis query
+```xml
+<!-- 댓글 작성 -->
+<insert id="save" parameterType="Comment">
+    INSERT INTO COMMENT
+    (
+        BOARD_NO,
+        MEMBER_NO,
+        CONTENT,
+        REG_DATE
+    )
+    VALUES
+    (
+        #{boardNo},
+        #{memberNo},
+        #{content},
+        NOW()
+    )
+    <selectKey keyProperty="commentNo" resultType="long" order="AFTER">
+        SELECT LAST_INSERT_ID()
+    </selectKey>
+</insert>
+
+<!-- 댓글 조회 -->
+<select id="getComment" parameterType="long" resultType="Comment">
+    SELECT
+        COMMENT_NO,
+        BOARD_NO,
+        MEMBER_NO,
+        CONTENT,
+        REG_DATE
+    FROM COMMENT
+    WHERE COMMENT_NO = #{commentNo}
+</select>
+
+<!-- 댓글 삭제 -->
+<delete id="deleteComment" parameterType="long">
+    DELETE FROM COMMENT
+    WHERE COMMENT_NO = #{commentNo}
+</delete>
+
+<!-- 게시글에 있는 모든 댓글 삭제 -->
+<delete id="deleteBoardComment" parameterType="long">
+    DELETE FROM COMMENT
+    WHERE BOARD_NO = #{boardNo}
+</delete>
+```
+
+* 게시글을 삭제할 경우 BoardServiceImpl에서 CommentMapper에 접근하여 deleteBoardComment를 통해 게시글에 있는 모든 댓글을 삭제하도록 구현하였다.
+* 댓글을 입력, 삭제할 경우 CommentServiceImpl에서 BoardMapper에 접근하여 댓글 수 컬럼을 변경하였다.
